# eeg-connection-hub

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  PRIVACY.md  README.md  SECURITY.md  pyproject.toml
examples/: enthea_consumer.py
fixtures/: demo_streams.json
schemas/: enthea.muse.features.v1.schema.json  hub.envelope.v1.schema.json
src/eeg_connection_hub/: __init__.py  auth.py  cli.py  config.py  features.py  hub_server.py  lsl_discovery.py  lsl_metadata.py  schemas.py  stream_mapping.py  stream_registry.py  synthetic.py
tests/: test_features.py  test_integration.py
